--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
-              <mainClass>fr.gdd.App</mainClass>
+              <mainClass>fr.gdd.Execute</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -69,7 +69,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <mainClass>fr.gdd.App</mainClass>
+          <mainClass>fr.gdd.Execute</mainClass>
         </configuration>
       </plugin>
     </plugins>
