--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,18 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.blazegraph</groupId>
+      <artifactId>bigdata-core</artifactId>
+        <version>2.1.4</version>
+    </dependency>
+    <!-- Use if Tinkerpop 2.5 support is needed ; See also Tinkerpop3 below. -->
+    <dependency>
+      <groupId>com.blazegraph</groupId>
+      <artifactId>bigdata-blueprints</artifactId>
+      <version>2.1.4</version>
+    </dependency>
+    
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
@@ -69,7 +81,8 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <mainClass>fr.gdd.VolcanoApp</mainClass>
+          <!-- <mainClass>fr.gdd.VolcanoApp</mainClass>-->
+          <mainClass>fr.gdd.HelloBlazegraph</mainClass>
         </configuration>
       </plugin>
     </plugins>
