--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,8 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <!-- <mainClass>fr.gdd.VolcanoApp</mainClass>-->
-          <mainClass>fr.gdd.HelloBlazegraph</mainClass>
+          <mainClass>fr.gdd.VolcanoApp</mainClass>
+          <!--<mainClass>fr.gdd.HelloBlazegraph</mainClass>-->
         </configuration>
       </plugin>
     </plugins>
