--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,38 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-fuseki-core</artifactId>
+      <version>4.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-fuseki-main</artifactId>
+      <version>4.7.0</version>
+    </dependency>
+    <dependency> 
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-security</artifactId>
+      <version>10.0.13</version> <!-- version 11.0.13 was bugged :( -->
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-webapp</artifactId>
+      <version>10.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-http</artifactId>
+      <version>10.0.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>10.0.13</version>
+    </dependency>
+    
+    
+    <dependency>
       <groupId>com.blazegraph</groupId>
       <artifactId>bigdata-core</artifactId>
         <version>2.1.4</version>
@@ -31,7 +63,7 @@
     <dependency>
       <groupId>org.apache.jena</groupId>
       <artifactId>apache-jena-libs</artifactId>
-      <version>4.6.1</version>
+      <version>4.7.0</version>
       <type>pom</type>
     </dependency>
     
@@ -81,7 +113,8 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <mainClass>fr.gdd.VolcanoApp</mainClass>
+          <mainClass>fr.gdd.FusekiApp</mainClass>
+          <!--<mainClass>fr.gdd.VolcanoApp</mainClass>-->
           <!--<mainClass>fr.gdd.HelloBlazegraph</mainClass>-->
         </configuration>
       </plugin>
