--- a/pom.xml
+++ b/pom.xml
@@ -14,32 +14,13 @@
       <artifactId>jena</artifactId>
       <version>0.0.1</version>
     </dependency>
-    
-    <dependency><!--security and access-->
-      <groupId>org.apache.shiro</groupId> 
-      <artifactId>shiro-core</artifactId>
-      <version>1.11.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.shiro</groupId>
-      <artifactId>shiro-web</artifactId>
-      <version>1.11.0</version>
-    </dependency>
 
     <dependency>
-      <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-core</artifactId>
-      <version>9.5.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.jena</groupId> <!-- to get ShiroEnvironmentLoader -->
+      <!-- to get ShiroEnvironmentLoader; or 
+           to get Services such as ActionServerStatus -->
+      <groupId>org.apache.jena</groupId> 
       <artifactId>jena-fuseki-webapp</artifactId>
       <version>4.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.15</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jena</groupId>
@@ -72,19 +53,6 @@
       <version>10.0.13</version>
     </dependency>
     
-    
-    <dependency>
-      <groupId>com.blazegraph</groupId>
-      <artifactId>bigdata-core</artifactId>
-        <version>2.1.4</version>
-    </dependency>
-    <!-- Use if Tinkerpop 2.5 support is needed ; See also Tinkerpop3 below. -->
-    <dependency>
-      <groupId>com.blazegraph</groupId>
-      <artifactId>bigdata-blueprints</artifactId>
-      <version>2.1.4</version>
-    </dependency>
-    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -109,12 +77,6 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.6</version>
     </dependency>
-
-    <!-- <dependency>
-         <groupId>com.blazegraph</groupId>
-         <artifactId>bigdata-core</artifactId>
-         <version>2.1.4</version>
-         </dependency> -->
   </dependencies>
 
   <build>
