--- a/sage-jena-tdb2/pom.xml
+++ b/sage-jena-tdb2/pom.xml
@@ -14,19 +14,18 @@
       <artifactId>sage-commons</artifactId>
       <version>0.0.1</version>
     </dependency>
-    
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
 
     <dependency>
       <groupId>org.apache.jena</groupId>
       <artifactId>apache-jena-libs</artifactId>
       <version>4.6.1</version>
       <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-tdb2</artifactId>
+      <version>4.7.0</version>
+      <scope>test</scope>
     </dependency>
     
     <dependency> <!-- logger of jena -->
@@ -39,6 +38,14 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.6</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.9.2</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -49,6 +56,8 @@
         <version>3.10.1</version>
         <configuration>
           <release>11</release>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
     </plugins>
