--- a/sage-jena-benchmarks/pom.xml
+++ b/sage-jena-benchmarks/pom.xml
@@ -132,7 +132,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <configuration>
-          <mainClass>fr.gdd.sage.SageJenaBenchmark</mainClass>
+          <mainClass>fr.gdd.sage.WatdivBenchmark</mainClass>
           <systemProperties>
             <systemProperty>
               <key>java.class.path</key>
@@ -147,7 +147,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.0.0</version>
         <configuration>
-          <mainClass>fr.gdd.sage.SageJenaBenchmark</mainClass>
+          <mainClass>fr.gdd.sage.WatdivBenchmark</mainClass>
         </configuration>
       </plugin>
 
