--- a/sage-jena-benchmarks/pom.xml
+++ b/sage-jena-benchmarks/pom.xml
@@ -88,6 +88,14 @@ THE POSSIBILITY OF SUCH DAMAGE.
       <version>${jmh.version}</version>
       <scope>provided</scope>
     </dependency>
+
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.9.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
