--- a/sage-jena-benchmarks/src/main/resources/simplelogger.properties
+++ b/sage-jena-benchmarks/src/main/resources/simplelogger.properties
@@ -1,3 +1,4 @@
 org.slf4j.simpleLogger.defaultLogLevel = error
 org.slf4j.simpleLogger.log.fr.gdd.sage.WatdivBenchmark = debug
+org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmark = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.datasets = info
