--- a/sage-jena-benchmarks/pom.xml
+++ b/sage-jena-benchmarks/pom.xml
@@ -29,17 +29,24 @@ ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
 THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>fr.gdd.sage</groupId>
   <artifactId>sage-jena-benchmarks</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
-
   <name>sage-jena-benchmarks</name>
 
+  <parent>
+    <groupId>fr.gdd.sage</groupId>
+    <artifactId>sage-jena</artifactId>
+    <version>0.0.1</version>
+  </parent>
+  
   <dependencies>
     <dependency>
       <groupId>org.apache.jena</groupId>
