--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
   <packaging>pom</packaging>
   <version>0.0.1</version>
 
+  <distributionManagement>
+    <site>
+      <id>${project.artifactId}-site</id>
+      <url>${project.baseUri}</url>
+    </site>
+  </distributionManagement>
+  
   <modules>
     <module>sage-commons</module>
     <module>sage-jena-tdb2</module>
