--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -15,6 +15,6 @@ jobs:
           java-version: '19'
           architecture: x64
           cache: maven
-      - name: Actually run tests with maven
-        run: mvn --batch-mode --update-snapshots test
+      - name: Run tests of modules
+        run: mvn test --batch-mode --update-snapshots --projects sage-jena-tdb2,sage-jena-volcano -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
