--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -15,6 +15,18 @@ jobs:
           java-version: '19'
           architecture: x64
           cache: maven
-      - name: Run tests of modules
-        run: mvn test --batch-mode --update-snapshots --projects sage-jena-tdb2,sage-jena-volcano -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
+      - name: Build modules
+        run: mvn --batch-mode --update-snapshots package -DskipTests -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+
+      - name: Run tests of modules
+        run: mvn --batch-mode --update-snapshots -Dmaven.test.failure.ignore=true test -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+
+      - name: Report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Maven Tests
+          path: ./*/target/surefire-reports/*.xml # prefixed with * since they are in submodules
+          reporter: java-junit
+          fail-on-error: true
