--- a/sage-jena-tdb2/pom.xml
+++ b/sage-jena-tdb2/pom.xml
@@ -62,6 +62,13 @@
           <target>11</target>
         </configuration>
       </plugin>
+
+      <plugin> <!-- so junit 5 tests are properly run on github -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0</version>
+      </plugin>
+
     </plugins>
   </build>
   
