--- a/sage-jena-volcano/pom.xml
+++ b/sage-jena-volcano/pom.xml
@@ -74,6 +74,14 @@
           <release>11</release>
         </configuration>
       </plugin>
+
+      <plugin> <!-- so junit 5 tests are properly run on github -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0</version>
+      </plugin>
+
+
     </plugins>
   </build>
   
