--- a/sage-commons/pom.xml
+++ b/sage-commons/pom.xml
@@ -5,36 +5,28 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.gdd.sage</groupId>
   <artifactId>sage-commons</artifactId>
-  <packaging>jar</packaging>
-  <version>0.0.1</version>
   <name>sage-commons</name>
-  <url>http://maven.apache.org</url>
+  <packaging>jar</packaging>
 
   <parent>
     <groupId>fr.gdd.sage</groupId>
     <artifactId>sage-jena</artifactId>
-    <version>0.0.1</version>
+    <version>${revision}</version>
   </parent>
   
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
-
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
-        <configuration>
-          <release>11</release>
-        </configuration>
       </plugin>
     </plugins>
   </build>
