--- a/sage-jena-volcano/pom.xml
+++ b/sage-jena-volcano/pom.xml
@@ -3,45 +3,39 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.gdd.sage</groupId>
   <artifactId>sage-jena-volcano</artifactId>
-  <packaging>jar</packaging>
-  <version>0.0.1</version>
   <name>sage-jena-volcano</name>
-  <url>http://maven.apache.org</url>
+  <packaging>jar</packaging>
 
   <parent>
     <groupId>fr.gdd.sage</groupId>
     <artifactId>sage-jena</artifactId>
-    <version>0.0.1</version>
+    <version>${revision}</version>
   </parent>
-  
+
+
   <dependencies>
     <dependency> <!-- makes use of already implem'd for compilation targeting jena -->
       <groupId>fr.gdd.sage</groupId>
       <artifactId>sage-jena-tdb2</artifactId>
-      <version>0.0.1</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.jena</groupId>
       <artifactId>apache-jena-libs</artifactId>
-      <version>4.7.0</version>
       <type>pom</type>
     </dependency>    
     <dependency> <!-- logger of jena -->
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>2.0.6</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>2.0.6</version>
     </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -69,16 +63,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
-        <configuration>
-          <release>11</release>
-        </configuration>
       </plugin>
 
       <plugin> <!-- so junit 5 tests are properly run on github -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0</version>
       </plugin>
 
 
