trying to find out bug, lot of log everywhere. but also done with join operator

--- a/sage-jena-benchmarks/src/main/resources/simplelogger.properties
+++ b/sage-jena-benchmarks/src/main/resources/simplelogger.properties
@@ -3,3 +3,5 @@ org.slf4j.simpleLogger.log.fr.gdd.sage.WatdivBenchmark = error
 org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmark = error
 org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmarkTest = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.datasets = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.Query10094Test = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.Query10152Test = info
