fix an issue with lazy iterator; fix an issue when timeout is small closes #14; first attempt at union, join and option closes #15

--- a/sage-commons/pom.xml
+++ b/sage-commons/pom.xml
@@ -7,6 +7,7 @@
   <artifactId>sage-commons</artifactId>
   <name>sage-commons</name>
   <packaging>jar</packaging>
+  <version>${revision}</version>
 
   <parent>
     <groupId>fr.gdd.sage</groupId>
