skeleton for random with some todo to do.

--- a/jena-sampling/pom.xml
+++ b/jena-sampling/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
 
     <dependency>
+      <groupId>fr.gdd.sage</groupId>
+      <artifactId>sage-jena-volcano</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.jena</groupId>
       <artifactId>apache-jena-libs</artifactId>
       <type>pom</type>
