java 20, parent poms' version hardcoded so it gets resolved even when mvn exec:java -pl sage-jena-module

--- a/sage-commons/pom.xml
+++ b/sage-commons/pom.xml
@@ -7,12 +7,11 @@
   <artifactId>sage-commons</artifactId>
   <name>sage-commons</name>
   <packaging>jar</packaging>
-  <version>${revision}</version>
 
   <parent>
     <groupId>fr.gdd.sage</groupId>
     <artifactId>sage-jena</artifactId>
-    <version>${revision}</version>
+    <version>0.0.1</version>
   </parent>
   
   <dependencies>
