--- a/jena-sampling/pom.xml
+++ b/jena-sampling/pom.xml
@@ -13,7 +13,7 @@
   <parent>
     <groupId>fr.gdd.sage</groupId>
     <artifactId>sage-jena</artifactId>
-    <version>${revision}</version>
+    <version>0.0.1</version>
   </parent>
 
   <dependencies>
