--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,13 @@
   <groupId>fr.gdd.sage</groupId>
   <artifactId>sage-jena</artifactId>
   <packaging>pom</packaging>
-  <version>${revision}</version> <!-- For now, shared version by all submodules -->
+  <!-- For now, shared version by all submodules. Unfortunately ${revision} in
+       children
+       does not work well… For instance, `mvn exec:java -pl sage-jena-module`
+       look for sage-jena:pom:${revision} instead of sage-jena:pom:0.0.1 Thus
+       fails. Hardcoded version of parent works… -->
+  <version>${revision}</version>
+
 
   <distributionManagement>
     <site>
@@ -27,16 +33,16 @@
   </modules>
 
   <properties>
-    <revision>0.0.2</revision>
+    <revision>0.0.1</revision>
     <junit.version>5.9.2</junit.version>
     <jena.version>4.7.0</jena.version>
     <slf4j.version>2.0.6</slf4j.version>
 
     <maven.surefire.version>3.0.0</maven.surefire.version>
     <maven.compiler.version>3.10.1</maven.compiler.version>
-    <maven.compiler.release>19</maven.compiler.release>
-    <maven.compiler.source>19</maven.compiler.source>
-    <maven.compiler.target>19</maven.compiler.target>
+    <maven.compiler.release>20</maven.compiler.release>
+    <maven.compiler.source>20</maven.compiler.source>
+    <maven.compiler.target>20</maven.compiler.target>
   </properties>
 
   <dependencyManagement>
@@ -55,7 +61,7 @@
       <dependency>
         <groupId>fr.gdd.sage</groupId>
         <artifactId>sage-jena-volcano</artifactId>
-        <version>${project.version}</version>
+        <version>0.0.1</version>
       </dependency>
       <dependency>
         <groupId>fr.gdd.sage</groupId>
