--- a/sage-jena-tdb2/pom.xml
+++ b/sage-jena-tdb2/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>fr.gdd.sage</groupId>
     <artifactId>sage-jena</artifactId>
-    <version>${revision}</version>
+    <version>0.0.1</version>
   </parent>
 
 
