--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <jena.version>4.7.0</jena.version>
     <slf4j.version>2.0.6</slf4j.version>
     <args4j.version>2.33</args4j.version>
+    <common.compress.version>1.23.0</common.compress.version>
 
     <maven.surefire.version>3.0.0</maven.surefire.version>
     <maven.compiler.version>3.10.1</maven.compiler.version>
