--- a/jena-sampling/pom.xml
+++ b/jena-sampling/pom.xml
@@ -47,6 +47,12 @@
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>fr.gdd.sage</groupId>
+      <artifactId>sage-jena-benchmarks</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
