--- a/jena-sampling/src/main/resources/simplelogger.properties
+++ b/jena-sampling/src/main/resources/simplelogger.properties
@@ -1,2 +1,3 @@
 org.slf4j.simpleLogger.defaultLogLevel = error
 org.slf4j.simpleLogger.log.fr.gdd.sage.OpExecutorRandomBGPTest = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.SmallBlocksInMemoryTDB2ForCardinality = debug
