on cardinality issue #20; and join order transformer #23; there are new issues with cyclic dependencies to resolve

--- a/sage-jena-tdb2/pom.xml
+++ b/sage-jena-tdb2/pom.xml
@@ -42,6 +42,12 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>fr.gdd.sage</groupId>
+      <artifactId>sage-jena-benchmarks</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
