--- a/sage-jena-volcano/pom.xml
+++ b/sage-jena-volcano/pom.xml
@@ -38,6 +38,13 @@
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>fr.gdd.sage</groupId>
+      <artifactId>sage-jena-benchmarks</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
