--- a/sage-jena-volcano/src/main/resources/simplelogger.properties
+++ b/sage-jena-volcano/src/main/resources/simplelogger.properties
@@ -1,2 +1,5 @@
-org.slf4j.simpleLogger.defaultLogLevel = debug
-org.slf4j.simpleLogger.log.fr.gdd.sage.arq = debug
+org.slf4j.simpleLogger.defaultLogLevel = error
+org.slf4j.simpleLogger.log.fr.gdd.sage.arq = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.OpExecutorSageBGPTest = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.arq.SageOptimizer = debug
+org.slf4j.simpleLogger.log.fr.gdd.sage.arq.SageOptimizerTest = debug
