--- a/sage-jena-databases/pom.xml
+++ b/sage-jena-databases/pom.xml
@@ -4,8 +4,8 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.gdd.sage</groupId> <!-- redundant with parent but preferred this way -->
-  <artifactId>sage-jena-tdb2</artifactId>
-  <name>sage-jena-tdb2</name>
+  <artifactId>sage-jena-databases</artifactId>
+  <name>sage-jena-databases</name>
   <packaging>jar</packaging>
 
   <parent>
@@ -41,13 +41,7 @@
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>fr.gdd.sage</groupId>
-      <artifactId>sage-jena-databases</artifactId>
-      <scope>test</scope>
-    </dependency>
-
+    
   </dependencies>
 
   <build>
