--- a/sage-jena-volcano/pom.xml
+++ b/sage-jena-volcano/pom.xml
@@ -41,7 +41,7 @@
 
     <dependency>
       <groupId>fr.gdd.sage</groupId>
-      <artifactId>sage-jena-benchmarks</artifactId>
+      <artifactId>sage-jena-databases</artifactId>
       <scope>test</scope>
     </dependency>
 
