--- a/jena-sampling/pom.xml
+++ b/jena-sampling/pom.xml
@@ -50,7 +50,7 @@
 
     <dependency>
       <groupId>fr.gdd.sage</groupId>
-      <artifactId>sage-jena-benchmarks</artifactId>
+      <artifactId>sage-jena-databases</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
