--- a/sage-jena-benchmarks/pom.xml
+++ b/sage-jena-benchmarks/pom.xml
@@ -61,6 +61,10 @@ THE POSSIBILITY OF SUCH DAMAGE.
       <groupId>fr.gdd.sage</groupId>
       <artifactId>sage-jena-volcano</artifactId>
     </dependency>
+    <dependency>
+      <groupId>fr.gdd.sage</groupId>
+      <artifactId>sage-jena-databases</artifactId>
+    </dependency>
 
     <dependency> <!-- logger -->
       <groupId>org.slf4j</groupId>
