github actions; and exact cardinality to test

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -22,11 +22,18 @@ jobs:
       - name: Run tests of modules
         run: mvn --batch-mode --update-snapshots -Dmaven.test.failure.ignore=true test -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
-      - name: Report
-        uses: dorny/test-reporter@v1
-        if: always()
+      - uses: actions/upload-artifact@v2  # upload test results
+        #   if: always()
+        if: success() || failure()        # run this step even if previous step failed
         with:
-          name: Maven Tests
-          path: ./*/target/surefire-reports/*.xml # prefixed with * since they are in submodules
-          reporter: java-junit
-          fail-on-error: true
+          name: test-results
+          path: jest-junit.xml
+      
+      # - name: Report
+      #   uses: dorny/test-reporter@v1
+
+      #   with:
+      #     name: Maven Tests
+      #     path: ./*/target/surefire-reports/*.xml # prefixed with * since they are in submodules
+      #     reporter: java-junit
+      #     fail-on-error: true
