--- a/jena-sampling/pom.xml
+++ b/jena-sampling/pom.xml
@@ -17,6 +17,11 @@
   </parent>
 
   <dependencies>
+    <dependency> <!-- genetic algorithm for FedUP to explore its space -->
+      <groupId>io.jenetics</groupId>
+      <artifactId>jenetics</artifactId>
+      <version>7.1.3</version>
+    </dependency>
 
     <dependency>
       <groupId>fr.gdd.sage</groupId>
