--- a/sage-jena-benchmarks/pom.xml
+++ b/sage-jena-benchmarks/pom.xml
@@ -219,10 +219,10 @@ THE POSSIBILITY OF SUCH DAMAGE.
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.6</version>
         </plugin>
-        <plugin>
+        <!--<plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.3</version>
-        </plugin>
+        </plugin>-->
         <plugin>
           <artifactId>maven-source-plugin</artifactId>
           <version>2.2.1</version>
