--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,11 @@ target/
 *.txt
 
 #### datasets #####
+datasets/
 watdiv10M/
 watdiv42M/
+#### generated queries ####
+sage-jena-benchmarks/queries/wdbench_opts_with_sage_plan/
 
 #### profiling ####
 *.profileconfig.json
