wip on wdbench, issue with preemption, must rework

--- a/sage-jena-volcano/src/main/resources/simplelogger.properties
+++ b/sage-jena-volcano/src/main/resources/simplelogger.properties
@@ -1,5 +1,6 @@
-org.slf4j.simpleLogger.defaultLogLevel = error
+org.slf4j.simpleLogger.defaultLogLevel = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.arq = info
-org.slf4j.simpleLogger.log.fr.gdd.sage.OpExecutorSageBGPTest = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.arq.OpExecutorSageBGPTest = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.arq.OpExecutorSageOptionalTest = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.optimizer.SageOptimizer = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.optimizer.SageOptimizerTest = debug
