--- a/sage-jena-benchmarks/src/main/resources/simplelogger.properties
+++ b/sage-jena-benchmarks/src/main/resources/simplelogger.properties
@@ -1,7 +1,9 @@
-org.slf4j.simpleLogger.defaultLogLevel = error
+org.slf4j.simpleLogger.defaultLogLevel = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.WatdivBenchmark = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmark = error
 org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmarkTest = debug
-org.slf4j.simpleLogger.log.fr.gdd.sage.datasets = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.WDBenchBenchmark = debug
+org.slf4j.simpleLogger.log.fr.gdd.sage.databases.persistent.WDBench = debug
+
 org.slf4j.simpleLogger.log.fr.gdd.sage.Query10094Test = info
 org.slf4j.simpleLogger.log.fr.gdd.sage.Query10152Test = info
