bit better, but not quite good

--- a/sage-jena-benchmarks/src/main/resources/simplelogger.properties
+++ b/sage-jena-benchmarks/src/main/resources/simplelogger.properties
@@ -1,4 +1,4 @@
-org.slf4j.simpleLogger.defaultLogLevel = error
+org.slf4j.simpleLogger.defaultLogLevel = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.WatdivBenchmark = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmark = error
 org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmarkTest = debug
@@ -7,3 +7,4 @@ org.slf4j.simpleLogger.log.fr.gdd.sage.databases.persistent.WDBench = debug
 
 org.slf4j.simpleLogger.log.fr.gdd.sage.Query10094Test = info
 org.slf4j.simpleLogger.log.fr.gdd.sage.Query10152Test = info
+org.slf4j.simpleLogger.log.fr.gdd.sage.WDBenchQuery309Test = info
