--- a/sage-jena-benchmarks/src/main/resources/simplelogger.properties
+++ b/sage-jena-benchmarks/src/main/resources/simplelogger.properties
@@ -4,6 +4,7 @@ org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmark = error
 org.slf4j.simpleLogger.log.fr.gdd.sage.SimplePatternBenchmarkTest = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.WDBenchBenchmark = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.databases.persistent.WDBench = debug
+org.slf4j.simpleLogger.log.fr.gdd.sage.Baseline = debug
 
 org.slf4j.simpleLogger.log.fr.gdd.sage.Query10094Test = info
 org.slf4j.simpleLogger.log.fr.gdd.sage.Query10152Test = info
