--- a/sage-jena-benchmarks/src/main/resources/simplelogger.properties
+++ b/sage-jena-benchmarks/src/main/resources/simplelogger.properties
@@ -9,3 +9,6 @@ org.slf4j.simpleLogger.log.fr.gdd.sage.Baseline = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.Query10094Test = info
 org.slf4j.simpleLogger.log.fr.gdd.sage.Query10152Test = info
 org.slf4j.simpleLogger.log.fr.gdd.sage.WDBenchQuery309Test = info
+
+
+org.slf4j.simpleLogger.log.org.apache.jena.sparql.engine.iterator.PreemptScanIteratorTupleId = info
