handling LIMIT, closes #21 ; Performances seems slightly down and need to be benched again. There are several room for improvement but consistency is the main criterion for now.

--- a/sage-jena-volcano/src/main/resources/simplelogger.properties
+++ b/sage-jena-volcano/src/main/resources/simplelogger.properties
@@ -4,4 +4,4 @@ org.slf4j.simpleLogger.log.fr.gdd.sage.arq.OpExecutorSageBGPTest = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.arq.OpExecutorSageOptionalTest = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.optimizer.SageOptimizer = debug
 org.slf4j.simpleLogger.log.fr.gdd.sage.optimizer.SageOptimizerTest = debug
-org.slf4j.simpleLogger.log.org.apache.jena.tdb2.solver = info
+org.slf4j.simpleLogger.log.org.apache.jena.tdb2.solver = debug
