--- a/sage-jena-module/pom.xml
+++ b/sage-jena-module/pom.xml
@@ -28,10 +28,6 @@
       <groupId>fr.gdd.sage</groupId>
       <artifactId>sage-jena-databases</artifactId>
     </dependency>
-    <dependency>
-      <groupId>fr.gdd.sage</groupId>
-      <artifactId>jena-sampling</artifactId>
-    </dependency>
 
     <dependency>
       <!-- to get ShiroEnvironmentLoader; or 
@@ -103,7 +99,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
-      <plugin>
+      <!--<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.3.0</version>
@@ -115,7 +111,7 @@
             </manifest>
           </archive>
         </configuration>
-      </plugin>
+      </plugin>-->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
